<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_inicio"
            android:checked="true"
            android:title="@string/menu_inicio"
            android:icon="@drawable/navigation_view_home_icon"/>
        <item
            android:id="@+id/menu_monumentos"
            android:title="@string/menu_monumentos"
            android:icon="@drawable/navigation_view_monument_icon"/>
        <item
            android:id="@+id/menu_mapa"
            android:title="@string/menu_mapa"
            android:icon="@drawable/navigation_view_map_icon"/>
        <item
            android:id="@+id/menu_ayuda"
            android:title="@string/menu_sobre_app"
            android:icon="@drawable/navigation_view_about_icon"/>
    </group>
</menu>