<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textAppearance="?android:attr/textAppearanceLarge"
       android:text="@string/app_name"
       android:layout_gravity="center_horizontal"
       android:textSize="25sp"
       android:textStyle="bold"/>

   <ImageView
       android:id="@+id/imagenApp"
       android:layout_margin="10dp"
       android:layout_width="fill_parent"
       android:layout_height="170dp"
       android:maxHeight="10dp"
       android:src="@drawable/ic_app"
       android:contentDescription="@string/logo"
       android:adjustViewBounds="true"/>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textAppearance="?android:attr/textAppearance"
       android:text="@string/app_version"
       android:id="@+id/version"
       android:layout_marginBottom="5dp"
       android:gravity="center_vertical|center_horizontal"
       android:layout_gravity="center_horizontal"
       android:textStyle="italic"/>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textAppearance="?android:attr/textAppearanceMedium"
       android:text="@string/about_app_1"
       android:layout_gravity="center_horizontal"
       android:padding="10dp"
       android:textSize="16sp" />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textAppearance="?android:attr/textAppearanceMedium"
       android:text="@string/about_app_2"
       android:layout_gravity="center_horizontal"
       android:padding="10dp"
       android:textSize="16sp"/>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/about_app_3"
       android:textAppearance="?android:attr/textAppearanceMedium"
       android:layout_gravity="center_horizontal"
       android:padding="10dp"
       android:textSize="16sp"/>

   </LinearLayout>

</ScrollView>