<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bonuspack_bubble">
    <ImageView android:id="@+id/bubble_image"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:visibility="gone"
        android:contentDescription="@string/descripcion"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView android:id="@+id/bubble_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:maxEms="17"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/titulo" />
            <Button android:id="@+id/boton_mas_informacion"
                android:visibility="gone"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_gravity="end"
                android:layout_weight="0"
                android:background="@drawable/btn_moreinfo"/>
        </LinearLayout>
        <TextView android:id="@+id/bubble_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="12sp"
            android:maxEms="17"
            android:text="@string/descripcion"
            android:maxLines="2"
            android:ellipsize="end"/>
        <TextView android:id="@+id/bubble_subdescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="12sp"
            android:maxEms="17"
            android:text="@string/subdescripcion"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>