<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"

    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    cardView:cardCornerRadius="4dp"
    cardView:cardElevation="4dp" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imagen_poi"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/imagen_poi"
            android:src="@drawable/logo_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titulo_poi"
            android:maxLines="2"
            android:padding="8dp"
            android:textColor="#222"
            android:textStyle="bold"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descripcion_poi"
            android:visibility="gone"
            android:maxLines="3"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="#666"
            android:textSize="14sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4">

            <Button
                android:text="@string/ir_al_mapa_boton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/boton_ir_al_mapa"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:textColor="@color/accent"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_gravity="start" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_weight="2"
                android:clickable="false"
                android:focusable="false" />

            <Button
                android:text="@string/leer_mas_boton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/boton_leer_mas"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/accent" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>